# batayan-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  safety.md
eval/: dataset.json
examples/: aisha.json  employee-ramon.json  liza.json  mateo.json
knowledge/hr-leave/: leave-policy.md  leave-policy.rules.json  manifest.json
knowledge/scholarships/: ched-tulong.md  ched-tulong.rules.json  dost-sei.md  dost-sei.rules.json  manifest.json
src/batayan/: __init__.py  __main__.py  cli.py  evaluate.py  foundry.py  knowledge.py  reasoner.py  schema.py
tests/: test_reasoning.py
video/: README.md  build.ps1  package-lock.json  package.json  script.json  tsconfig.json
video/public/audio/: timeline.json
video/src/: Demo.tsx  Root.tsx  anim.ts  scenes.ts  theme.ts  timeline.ts
video/src/components/: Background.tsx  Beat.tsx  Caption.tsx  Chip.tsx  Frame.tsx  Intro.tsx  Ledger.tsx  Outro.tsx
video/voice/: recording-script.md
